# skipi-crewing

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  presence-manifest.json
.github/: SIGNING_SETUP.md
.github/workflows/: release.yml  skipi-guard.yml
scripts/: launch-ai-assistant.sh  publish-build.sh
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json  desktop-updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  db.rs  feedback.rs  lib.rs  main.rs  messaging.rs
tests/: build_provenance_harness.mjs  crewing_compliance_manual_flow_harness.mjs  crewing_crew_flow_demo_harness.mjs  crewing_mail_cv_intake_demo_harness.mjs  crewing_mailbox_contract_harness.mjs  crewing_plugin_isolation_harness.mjs  crewing_presence_contract_harness.mjs  settings5_preview_gated_harness.mjs  trial_gate_wired_harness.mjs
