[package]
name = "skipi-crewing"
version = "0.4.128"
description = "Skipi Crewing - United Seafarers. Vacancy posting and applications inbox for verified employers"
authors = ["Tymur Rudov"]
license = "Proprietary"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
dirs = "6"
printpdf = { version = "0.7", default-features = false }
base64 = "0.22"
crypto_box = { version = "0.9", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
data-encoding = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
